Corrected overlapping icons and inputs

--- a/Styles/MAIN.css
+++ b/Styles/MAIN.css
@@ -962,10 +962,10 @@ Sell...
 	box-shadow: 0px 1px 3px 1px #ddd;
 	border: inset 1px solid #ccc;
 	border-radius: 8px;
-	padding: 0.2em 0.2em;
+	padding-top: 0.2em;
 	box-sizing: border-box;
 	font-family: Proxima-Nova;
-	margin: 0px 0px 5px 20px;
+	margin: 0px 0px 15px 20px;
 }
 
 #before-phone
@@ -1133,6 +1133,7 @@ Sell-nojs....
 	border:1px solid #ccc;
 	box-shadow:inset 0 1px 3px #ddd;
 	border-radius:4px;
+	margin-bottom: 6px;
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
@@ -1144,6 +1145,7 @@ Sell-nojs....
 	border:1px solid #ccc;
 	box-shadow:inset 0 1px 3px #ddd;
 	border-radius:4px;
+	margin-bottom: 6px;
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
